# ski-calendar-generator

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ski_calendar_generator/: api.py  calendar_generator.py  event_state_tracker.py  ski_data_fetcher.py
